# domain

./: .gitattributes  README.md  flake.nix  pyproject.toml  pythoneda-0.0.1.nix  setup.cfg  setup.py
.github/workflows/: deploy.yml
PythonEDA/: domain_exception.py  entity.py  entity_in_progress.py  event.py  event_emitter.py  event_listener.py  formatting.py  port.py  ports.py  primary_port.py  repo.py  sensitive_value.py  unsupported_event.py  value_object.py
PythonEDA/application/: pythoneda.py  pythoneda_application.py
PythonEDA/infrastructure/network/grpc/: grpc_server.py
nix/: devShells.nix  flake.nix  shared.nix
nix-shared/: shared.nix
pythoneda/: __init__.py  base_object.py  domain_exception.py  entity.py  entity_in_progress.py  event.py  event_emitter.py  event_listener.py  event_listener_port.py  flow.py  formatting.py  logging_port.py  logging_port_fallback.py  port.py  ports.py  primary_port.py  repo.py  sensitive_value.py  unsupported_event.py  value_object.py
pythoneda/shared/: __init__.py  _utils.py  base_object.py  domain_exception.py  entity.py  entity_in_progress.py  event.py  event_emitter.py  event_listener.py  event_listener_port.py  event_reference.py  flow.py  formatting.py  invariant.py  invariants.py  logging_port.py  logging_port_fallback.py  port.py  ports.py  primary_port.py  pythoneda_application.py  repo.py  sensitive_value.py  unsupported_event.py  value_object.py
scripts/: fix_pythonpath.py
src/infrastructure/network/grpc/: server.py
tests/: value_object_tests.py
