[tool.poetry]
name = "pythoneda"
version = "0.0.1a19"
description = "Support for EDA applications in Python"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-shared/pythoneda"
packages = [{include = "pythoneda"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
