[metadata]
name = pythoneda
version = 0.0.1a5
author = rydnr
author_email = github@acm-sl.org
description = Support for event-driven architectures in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rydnr/pythoneda
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = PythonEDA
python_requires = >=3.6

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests
